--- a/css/dialogs/deviceCount.css
+++ b/css/dialogs/deviceCount.css
@@ -1,14 +1,15 @@
 .dialog-background.device-count-dialog .dialog-center .dialog-content {
     margin:                         0 auto 0 auto;
-    margin-top:                     -168px;
+    margin-top:                     -80px;
     width:                          480px;
-    height:                         336px;
+    height:                         180px;
     background-color:               var(--ui-background2);
     position:                       relative;
     border-radius:                  2px;
 }
-.dialog-background.device-count-dialog .dialog-center .dialog-content .radio {
+.dialog-background.device-count-dialog .dialog-center .dialog-content .dropdown {
     position:                       absolute;
     left:                           32px;
     top:                            64px;
+    width:                          128px;
 }
